--- a/templates/security/forgottenPassword.html.twig
+++ b/templates/security/forgottenPassword.html.twig
@@ -9,7 +9,7 @@
 <section class="ftco-section masthead">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-sm-7 col-md-8 col-lg-4">
                 <div id="login" class="login-wrap bg-secondary py-3 shadow d-block">
                     <a href="index.html" class="d-flex align-items-center justify-content-center p-4">
                         <img src="assets/images/lunette.png" width="100%" alt="">
