--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
 
             {% include "common/flash.html.twig" %}
             
-            <div class="col-md-6 col-lg-4">
+            <div class="col-sm-7 col-md-8 col-lg-4">
                 <div id="login" class="login-wrap bg-secondary py-3 shadow d-block">
                     <a href="index.html" class="d-flex align-items-center justify-content-center p-4">
                         <img src="assets/images/lunette.png" width="100%" alt="">
