close #34, error 404 template added and some css modifications

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -13,8 +13,8 @@
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-8 col-lg-4">
                 <div id="login" class="login-wrap bg-secondary py-3 shadow d-block">
-                    <a href="index.html" class="d-flex align-items-center justify-content-center p-4">
-                        <img src="assets/images/lunette.png" width="100%" alt="">
+                    <a href="{{ path("app_login") }}" class="d-flex align-items-center justify-content-center p-4">
+                        <img src="assets/images/lunette.png" width="100%" alt="login">
                     </a>
                     <h3 class="text-center text-grey mb-0">Welcome</h3>
                     <p class="text-center" style="color: #fafafacc">Create an account by entering the information below
