--- a/templates/common/footer.html.twig
+++ b/templates/common/footer.html.twig
@@ -26,13 +26,13 @@
             <!-- Footer Social Icons-->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">Around the Web</h4>
-                <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.fr"><i
+                <a class="btn btn-outline-light btn-social mx-1" href="https://fr-fr.facebook.com"><i
                         class="fab fa-fw fa-facebook-f"></i></a>
                 <a class="btn btn-outline-light btn-social mx-1" href="https://www.twitter.fr"><i
                         class="fab fa-fw fa-twitter"></i></a>
                 <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.fr"><i
                         class="fab fa-fw fa-linkedin-in"></i></a>
-                <a class="btn btn-outline-light btn-social mx-1" href="https://www.dribble.fr"><i
+                <a class="btn btn-outline-light btn-social mx-1" href="https://dribbble.com/"><i
                         class="fab fa-fw fa-dribbble"></i></a>
             </div>
             <!-- Footer About Text-->
