--- a/templates/security/resetPassword.html.twig
+++ b/templates/security/resetPassword.html.twig
@@ -12,7 +12,7 @@
         <div class="row justify-content-center">
             <div class="col-sm-7 col-md-8 col-lg-4">
                 <div id="login" class="login-wrap bg-secondary py-3 shadow d-block">
-                    <a href="index.html" class="d-flex align-items-center justify-content-center p-4">
+                    <a href="{{ path("app_login") }}" class="d-flex align-items-center justify-content-center p-4">
                         <img src="/assets/images/lunette.png" width="100%" alt="">
                     </a>
                     <h3 class="text-center mb-0" style="color: #fafafacc">Welcome</h3>
