--- a/templates/editTrick.html.twig
+++ b/templates/editTrick.html.twig
@@ -80,7 +80,7 @@
         {% for imageField in trickForm.images %}
         <li>
             {% if imageField.vars["data"].path is not null %}
-            <div class="col-6 p-2 item">
+            <div class="col-sm col-md-7 p-2 item">
                 <div class="card h-100 d-flex flex-column">
                     <a href="{{ asset('assets/uploads/images/'~ imageField.vars["data"].path ) }}"
                         class="rounded-top d-block" target="_blank">
